--- a/index.html
+++ b/index.html
@@ -81,21 +81,22 @@
 
         <section class="card card-flex">
             <div class="task-list-name-header">
-                <h2>Todo List</h2>
-                    <div class="filter-controls">
-                        <button type="reset" class="clear-filters-btn" id="clear-all-filters">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <line x1="18" y1="6" x2="6" y2="18"></line>
-                                <line x1="6" y1="6" x2="18" y2="18"></line>
-                            </svg>
-                            Clear Filters
-                        </button>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="show-filters" checked>
-                            <span class="slider"></span>
-                            <span class="label">Filters</span>
-                        </label>
-                    </div>
+                <h2>Todo</h2>
+                <div class="filter-controls">
+                    <button type="reset" class="clear-filters-btn" id="clear-all-filters">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="18" y1="6" x2="6" y2="18"></line>
+                            <line x1="6" y1="6" x2="18" y2="18"></line>
+                        </svg>
+                        Clear Filters
+                    </button>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="show-filters" checked>
+                        <span class="slider"></span>
+                        <span class="label">Filters</span>
+                    </label>
+                </div>
+                <!-- <button type="button" class="toggle-filters" id="toggle-filters">Filter Tasks ▼</button> -->
             </div>
             <form class="filter-card filter-grid" id="filter-section">
                 <div class="form-group">
@@ -153,7 +154,7 @@
         </section>
         
         <section class="card card-flex">
-            <h2>Completed Tasks</h2>
+            <h2>Done</h2>
             <div class="task-list-container">
                 <div class="task-list-header">
                     <div class="done-header">Status</div>
