--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <textarea rows=1 name="new-task" id="new-task" placeholder="Enter task description" required></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="priority">Priority</label>
+                            <label for="new-priority">Priority</label>
                             <select name="new-priority" id="new-priority" required>
                                 <option value="" disabled selected>Select priority</option>
                                 <option value="Low">Low</option>
