--- a/_brainstorming/index.html
+++ b/_brainstorming/index.html
@@ -163,7 +163,7 @@
                     </label>
                     <label>Priority
                         <select name="filter-priority" class="filter" id="filter-priority">
-                            <option selected value>Select Priority</option>
+                            <option selected value>All Priorities</option>
                             <option value="Low">Low</option>
                             <option value="Medium">Medium</option>
                             <option value="High">High</option>
