revisi done-list dan tampilan saat tidak ada todo

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                 <div id="todo-list">
                     <!-- Tasks will be inserted here -->
                 </div>
-                <div id="todo-empty" class="empty-state hidden">No tasks found!</div>
+                <!-- <div id="todo-empty" class="empty-state hidden">No tasks found!</div> -->
+                <div id="todo-empty" class="empty-state">No tasks found!</div>
             </div>            
         </section>
         
@@ -177,7 +178,8 @@
                 <div id="completed-list">
                     <!-- Completed tasks will be inserted here -->
                 </div>
-                <div id="completed-empty" class="empty-state hidden">No completed tasks yet!</div>
+                <!-- <div id="completed-empty" class="empty-state hidden">No completed tasks yet!</div> -->
+                <div id="completed-empty" class="empty-state">No completed tasks yet!</div>
             </div>
         </section>
     </main>
